--- a/app/styles/ui/_dialog.scss
+++ b/app/styles/ui/_dialog.scss
@@ -64,7 +64,7 @@ dialog {
       }
     }
 
-    &-leave {
+    &-exit {
       opacity: 1;
       transform: scale(1);
       pointer-events: none;
@@ -74,7 +74,7 @@ dialog {
       }
     }
 
-    &-leave-active {
+    &-exit-active {
       opacity: 0.01;
       transform: scale(0.25);
       transition: opacity 100ms ease-in, transform 100ms var(--easing-ease-in-back);
